# plancontract

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml  release.yml
docs/: design.md
examples/: basic_usage.py
examples/data/: plan_draft.parallel.json  plan_draft.sequential.json
schemas/: agent_plan.schema.json  plan_draft.schema.json
src/plancontract/: __init__.py  __main__.py  cli.py  errors.py  finalize.py  merge.py  models.py  policy.py  topology.py  validate.py
tests/: conftest.py  helpers.py  test_cli.py  test_errors.py  test_finalize.py  test_integration.py  test_merge.py  test_models.py  test_schemas.py  test_topology.py  test_validate.py
