[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plancontract"
version = "0.1.0"
description = "Framework-agnostic schemas and validators for multi-agent turn routing plans"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "PlanContract Contributors" }]
keywords = [
    "agents",
    "ai",
    "langgraph",
    "multi-agent",
    "orchestration",
    "planning",
    "pydantic",
    "routing",
    "validation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "build>=1.2",
    "pre-commit>=4.0",
]

[tool.uv]
default-groups = ["dev"]

[project.scripts]
plancontract = "plancontract.cli:main"

[project.urls]
Homepage = "https://github.com/plancontract/plancontract"
Documentation = "https://github.com/plancontract/plancontract#readme"
Repository = "https://github.com/plancontract/plancontract"
Issues = "https://github.com/plancontract/plancontract/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/plancontract"]

[tool.hatch.build.targets.sdist]
include = [
    "src/plancontract",
    "tests",
    "schemas",
    "examples",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-q",
    "--strict-config",
    "--strict-markers",
    "--import-mode=importlib",
]
pythonpath = ["src", "tests"]
filterwarnings = ["error"]
xfail_strict = true

[tool.coverage.run]
source = ["plancontract"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF", "PT", "PTH"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["plancontract"]
mypy_path = "src"
